container spacing issue

--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ nav {  width: 100%;height: auto; background: #585e645c; margin: -16px 0; }
 .info-sub,.image-box,.content-box {  margin: 20px; }
 .content-img { margin-top:10px; }
 .icon-container { margin-bottom: -40px; position: relative; z-index: 2;}
-.bg-image-container { background-image:linear-gradient(#607D8B 10%, #9E9E9E 60%,#607D8B ); width: 99vw; height:30vh; }
+.bg-image-container { background-image:linear-gradient(#607D8B 10%, #9E9E9E 60%,#607D8B ); width: 99vw; height:32vh; }
 .bg-sub-contain,.info-main,.main,.content-box p { margin: auto; }
 .round-image { border-radius: 50%;height: 100%; width: 100%; }
 .content-box p { font-size: 15px;width: 80%; letter-spacing: 1px; }
